add 使用 GitHub Pages、Hexo 和 NexT 主题搭建 Blog

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ external_link:
 filename_case: 1
 render_drafts: false
 post_asset_folder: true
+# relative_link: false
+# future: true
 highlight:
   enable: true
   line_number: true
