some changes and some Articles

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -198,12 +198,14 @@ social_icons:
 # Blog rolls
 links_settings:
   icon: link
-  title: Links
+  title: 友情链接
   # Available values: block | inline
   layout: block
 
 links:
   #Title: http://yoursite.com
+  freeCodeCamp: https://www.freecodecamp.org/
+  S1ngS1ng: https://singsing.io/blog/
 
 # Table of Contents in the Sidebar
 # Front-matter variable (unsupport wrap expand_all).
@@ -212,9 +214,9 @@ toc:
   # Automatically add list number to toc.
   number: true
   # If true, all words will placed on next lines if header width longer then sidebar width.
-  wrap: false
+  wrap: true
   # If true, all level of TOC in a post will be displayed, rather than the activated part of it.
-  expand_all: false
+  expand_all: true
   # Maximum heading depth of generated toc.
   max_depth: 6
 
